Posts need to know about their layout

--- a/_posts/2010-03-29-focus.md
+++ b/_posts/2010-03-29-focus.md
@@ -1,4 +1,5 @@
 ---
+layout: post
 title: "What's your focus?"
 excerpt:
   Every great website has a focus.  If you can&rsquo;t summarize the purpose of your website into one sentence, ten words or less &mdash; your idea will almost certainly fail.  Talking to founders, I&rsquo;d say this idea is pretty well established.  Now let me reveal a secret that is not so well established: your website&rsquo;s design should follow this same focus.
