Fix broken rollingstone link

--- a/_posts/2010-03-29-focus.md
+++ b/_posts/2010-03-29-focus.md
@@ -81,7 +81,7 @@ There is a huge genre of sites that seem to have completely forgotten their focu
 
 ### [Rolling Stone](http://www.rollingstone.com/politics/story/32255149/wall_streets_bailout_hustle/p)
 
-<div class="figure"><img src="http://assets.warpspire.com/images/rollingstone.gif" alt="Rolling Stone" /></div>
+<div class="figure"><img src="http://assets.warpspire.com/images/focus/rollingstone.gif" alt="Rolling Stone" /></div>
 
 It&rsquo;s no wonder news sites can&rsquo;t get people to pay for their content. You need to focus on your content to get people to pay for it.
 
