Use plain css for the example for clarity

--- a/_posts/2011-12-05-kss.md
+++ b/_posts/2011-12-05-kss.md
@@ -30,25 +30,27 @@ I've created a [specification](https://github.com/kneath/kss/blob/master/SPEC.md
 
 In a nutshell, KSS looks like this:
 
-    // A button suitable for giving stars to someone.
-    //
-    // .star-given - A highlight indicating you've already given a star.
-    // .disabled   - Dims the button to indicate it cannot be used.
-    //
-    // Styleguide 2.2.1.
-    a.button.star{
-      color:#000;
+{% highlight css %}
+/*
+A button suitable for giving stars to someone.
 
-      .star{ font-size:10px; }
+:hover             - Subtle hover highlight.
+.stars-given       - A highlight indicating you've already given a star.
+.stars-given:hover - Subtle hover highlight on top of stars-given styling.
+.disabled          - Dims the button to indicate it cannot be used.
 
-      &.star-given{
-        color:#ae7e00;
-      }
-
-      &.disabled{
-        opacity:0.5;
-      }
-    }
+Styleguide 2.1.3.
+*/
+a.button.star{
+  ...
+}
+a.button.star.stars-given{
+  ...
+}
+a.button.star.disabled{
+  ...
+}
+{% endhighlight %}
 
 The idea is to write simple, yet machine parseable documentation such that you can automatically create a living styleguide like this one:
 
