Clean up the home page

--- a/_posts/2012-08-02-pace.md
+++ b/_posts/2012-08-02-pace.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: "Pace"
+summary: I want to spend more time conscious of the pace of my life.
 excerpt:
   American service constantly presses on its diners. Can I show you to your seat? Here’s some menus. How’s the meal? Would you like the check? The pace of meals in America is a reflection of this service style. People come in for dinner, eat, and leave.
 ---
