--- a/_posts/2014-01-03-product.md
+++ b/_posts/2014-01-03-product.md
@@ -80,3 +80,5 @@ I've been thinking a lot about principles of good product. At least, principles 
 * Operational systems that allow for good product
 
 I want to spend more of my time writing about these ideas. More time debating and collaborating on these ideas. And coming up with better ideas so we can all build better things and make a future where we can expect things to get better.
+
+**[Discuss this article on Designer News](https://news.layervault.com/stories/12355-product-by-kyle-neath)**
