--- a/_posts/2011-08-02-ops-art.md
+++ b/_posts/2011-08-02-ops-art.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: "Deploying: Then & Now"
+category: opinion
 summary: Of deploying a major feature on a stage and my love for Hubot.
 excerpt:
   A couple months ago I got up on stage during lightening talks  at CodeConf 2011 to talk about our friendly robot, Hubot. Inside of five minutes I logged into our Campfire room with spotty WiFi, asked Hubot a favor, and he deployed a major new feature to our site — Issues 2.0. A deploy spanning around 30 servers that changed a major feature for 800,000 users. It was pretty awesome and kind of a ridiculous thing to do.
