--- a/_posts/2011-12-05-kss.md
+++ b/_posts/2011-12-05-kss.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: "Knyle Style Sheets"
+category: opinion
 summary: Documentation for any flavor of CSS that you’ll love to write.
 excerpt:
   So I've been writing CSS for somewhere around 13 years now. Some might think I've learned the right way to write CSS in that time — but if you ask me all I've learned is the most efficient way to drive someone insane.
