--- a/_posts/2014-01-03-product.md
+++ b/_posts/2014-01-03-product.md
@@ -1,10 +1,11 @@
 ---
 layout: post
 title: "Product"
+category: opinion
 summary: Product is the reason that I build software. I want to create things that bring people joy. I want to build things I can be proud of. Things that makes the world a better place.
 ---
 
-Marc Andreessen was the first to coin the phrase: *[software is eating the world](http://online.wsj.com/news/articles/SB10001424053111903480904576512250915629460)*. And I tend to agree with him — no phrase defines our time more so than this one. More and more companies are powered by and create software. More and more *people* are creating software. Software is everywhere — plugged into our cars, our bikes, stuffed in our pockets, embedded in our TVs, and controlling a vast majority of the world we've created. 
+Marc Andreessen was the first to coin the phrase: *[software is eating the world](http://online.wsj.com/news/articles/SB10001424053111903480904576512250915629460)*. And I tend to agree with him — no phrase defines our time more so than this one. More and more companies are powered by and create software. More and more *people* are creating software. Software is everywhere — plugged into our cars, our bikes, stuffed in our pockets, embedded in our TVs, and controlling a vast majority of the world we've created.
 
 Yet I find myself wondering: what *kind* of software is eating the world?
 
@@ -23,7 +24,7 @@ Product is the reason that I build software. I want to create things that bring 
 
 *You can't argue against pageviews — people want this. It may be slimy, but it works.*
 
-I look around at software today and I wouldn't be proud of it. Most software is frustrating, broken, and in all honesty, a disservice to humanity.  I would be ashamed to be associated with the vast majority of software that exists today. 
+I look around at software today and I wouldn't be proud of it. Most software is frustrating, broken, and in all honesty, a disservice to humanity.  I would be ashamed to be associated with the vast majority of software that exists today.
 
 *Yeah, but he made a $20M exit, it must have been a decent product.*
 
