--- a/_posts/2014-08-06-secret.md
+++ b/_posts/2014-08-06-secret.md
@@ -47,7 +47,7 @@ By my moral compass, this risk is far too high. I'm not comfortable ruining anyo
 
 You're risking our well-being for a couple of bucks — will you do us a favor in return? **I am asking you, the investors of Secret, to raise $25 million USD for [The Ocean Cleanup](http://www.theoceancleanup.com/)** (the amount of money in Secret's last round of funding). I have personally donated to the project, and I would love to see the pilot realized. He's only asking for $2M, but I'd love to see what he could do with $25M. Because even if this attempt doesn't work, it's become clear to me that Boyan has the passion required to keep at this problem.
 
-By funding Secret, you seem comfortable risking the anguish and suffering of human beings for the potential of more money. This is why I think it's fair to ask you to risk some of your money for potentially cleaner oceans and a healthier planet in return. I know you see money differently than we do. You have lots of it, and you can always make more — it's a game to be played. And I understand that VCs are rarely *personally* funding companies — but I'm asking you to use your fundraising skills to get Boyan the funding he deserves. Raising money is your expertise, and you're really good at it.
+By funding Secret, you seem comfortable risking the anguish and suffering of human beings for the potential of more money, so must have a lot of money. This is why I think it's fair to ask you to risk some of your money for potentially cleaner oceans and a healthier planet in return. I know you see money differently than we do. You have lots of it, and you can always make more — it's a game to be played. And I understand that VCs are rarely *personally* funding companies — but I'm asking you to use your fundraising skills to get Boyan the funding he deserves. Raising money is your expertise, and you're really good at it.
 
 Besides, wouldn't it be cool to see a new type of business succeed — one that profits from improving the environment? If I was a person interested in creating new businesses, I'd think it would be pretty cool.
 
