HOW DID I MISS THAT PUN

--- a/_posts/2014-08-06-secret.md
+++ b/_posts/2014-08-06-secret.md
@@ -5,7 +5,7 @@ category: opinion
 summary: Secret's champions claim the service will overcome the darker side of human behavior and won't become a tool for bullying and defamation. I'm not so sure, so I have a favor to ask.
 ---
 
-It's no lie that I dislike [Secret](https://www.secret.ly/). Just this week I had a crisis of existence when I found myself [agreeing with Sarah Lacy on the topic](http://pando.com/2014/07/31/investors-have-to-stop-trying-to-justify-the-lies-and-libel-of-secret/). Many of my friends have suffered severe emotional damage as a result of defamations posted on the service: it's not pretty. But more importantly, it seems clear to me this is only the start. You see, I agree with Sarah that Secret will take lives. Not directly, of course. But perhaps in the hands of a bullying teen picking on a severely depressed peer. And maybe that post — that secret, that was the last thing, the thing that made them decide they could no longer stand the world, and led to them taking their life. Their suicide probably would have happened with or without Secret — but I know that Secret will be cited as the last straw for suicides if it continues to grow. It's about as guaranteed as teens using Snapchat to send nude pictures to each other. [Good thing that can't happen](http://nypost.com/2014/06/29/teen-sues-boy-over-nude-snapchat-spread-on-social-media/).
+It's [no secret](https://twitter.com/kneath/status/496337719555940352) that I dislike [Secret](https://www.secret.ly/). Just this week I had a crisis of existence when I found myself [agreeing with Sarah Lacy on the topic](http://pando.com/2014/07/31/investors-have-to-stop-trying-to-justify-the-lies-and-libel-of-secret/). Many of my friends have suffered severe emotional damage as a result of defamations posted on the service: it's not pretty. But more importantly, it seems clear to me this is only the start. You see, I agree with Sarah that Secret will take lives. Not directly, of course. But perhaps in the hands of a bullying teen picking on a severely depressed peer. And maybe that post — that secret, that was the last thing, the thing that made them decide they could no longer stand the world, and led to them taking their life. Their suicide probably would have happened with or without Secret — but I know that Secret will be cited as the last straw for suicides if it continues to grow. It's about as guaranteed as teens using Snapchat to send nude pictures to each other. [Good thing that can't happen](http://nypost.com/2014/06/29/teen-sues-boy-over-nude-snapchat-spread-on-social-media/).
 
 I wonder if they'll publish their suicide note on Secret too?
 
