--- a/_posts/2014-09-04-ego.md
+++ b/_posts/2014-09-04-ego.md
@@ -23,7 +23,7 @@ Ego is such a hard thing. I struggle with it constantly. I struggle with it righ
 
 But here I am. And I want it to be about me.
 
-And to be honest, that's still the hardest thing about designing products. *Design is a job.* If I want people to celebrate me, this isn't the career for me. My job is to make good shit that people like. And there isn't room for me in that equation.
+And to be honest, that's still the hardest thing about designing products. *Design is a job.* If I want people to celebrate me, this isn't the career. My job is to make good shit that people like. And there isn't room for me in that equation.
 
 There's the product.
 
@@ -38,7 +38,7 @@ So you know, I have to remind myself: it's about them. It's about the customers.
 <blockquote class="twitter-tweet tw-align-center" lang="en"><p>Product: compassion strong enough to ignore your selfish desires in order to build something for someone else.</p>&mdash; Kyle Neath (@kneath) <a href="https://twitter.com/kneath/status/425100294809059328">January 20, 2014</a></blockquote>
 <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 
-Tomorrow — I'll be a customer. And then it can finally be all about me.
+Tomorrow — I'll be a customer. And then it can be about me.
 
 
 * * * *
