Misspell the opener, classic Kyle

--- a/_posts/2017-03-24-next.md
+++ b/_posts/2017-03-24-next.md
@@ -2,10 +2,10 @@
 layout: post
 title: Next
 category: opinion
-summary: <em>So, what it is you do all day?</em>
+summary: <em>So, what is it you do all day?</em>
 ---
 
-*So, what it is you do all day?*
+*So, what is it you do all day?*
 
 I sort of disappeared a few years ago. I had a simple but difficult decision: stay and help [GitHub](https://github.com) to help grow the company or leave and help my family when they needed help most. In the space of a couple of weeks I quit my job, packed up my belongings, and moved out of San Francisco.
 
