Serve assets over TLS like we're in some kind of future

--- a/_posts/2011-08-02-ops-art.md
+++ b/_posts/2011-08-02-ops-art.md
@@ -9,7 +9,7 @@ excerpt:
 
 A couple months ago I got up on stage during lightening talks  at [CodeConf 2011](http://codeconf.com) to talk about our friendly robot, [Hubot](http://hubot.github.com).
 
-<div class="figure"><img src="http://assets.warpspire.com/images/opsart/hubot-thinner.png" /></div>
+<div class="figure"><img src="https://assets.warpspire.com/images/opsart/hubot-thinner.png" /></div>
 
 Inside of five minutes I logged into our Campfire room with spotty WiFi, asked Hubot a favor, and he deployed a major new feature to our site — [Issues 2.0](https://github.com/blog/831-issues-2-0-the-next-generation). A deploy spanning around 30 servers that changed a major feature for 800,000 users. It was pretty awesome and kind of a ridiculous thing to do.
 
