--- a/_posts/2011-12-05-kss.md
+++ b/_posts/2011-12-05-kss.md
@@ -57,8 +57,8 @@ a.button.star.disabled{
 The idea is to write simple, yet machine parseable documentation such that you can automatically create a living styleguide like this one:
 
 <div class="figure">
-<a href="http://assets.warpspire.com/images/kss/styleguide-full.png">
-  <img src="http://assets.warpspire.com/images/kss/styleguide-thumb.png" alt="Styleguide screencapture" />
+<a href="https://assets.warpspire.com/images/kss/styleguide-full.png">
+  <img src="https://assets.warpspire.com/images/kss/styleguide-thumb.png" alt="Styleguide screencapture" />
  </a>
 </div>
 
