--- a/_posts/2014-01-03-product.md
+++ b/_posts/2014-01-03-product.md
@@ -10,7 +10,7 @@ Marc Andreessen was the first to coin the phrase: *[software is eating the world
 Yet I find myself wondering: what *kind* of software is eating the world?
 
 <div class="figure">
-  <img src="http://assets.warpspire.com/images/product/wsj.jpg">
+  <img src="https://assets.warpspire.com/images/product/wsj.jpg">
   <small>Does the software that Wall Street Journal uses advance journalism and better inform the public?</small>
 </div>
 
