--- a/_posts/2014-10-02-taste.md
+++ b/_posts/2014-10-02-taste.md
@@ -89,7 +89,7 @@ So I stole the idea. It felt like the perfect medium to communicate taste. I spe
 I presented these in two ways: as part of a presentation given at our semi-annual product development summit (where I elaborated on each point) and as a pull request in our codebase.
 
 <div class="figure">
-<img src="http://assets.warpspire.com/images/zen/zen.jpg" />
+<img src="https://assets.warpspire.com/images/zen/zen.jpg" />
 </div>
 
 Committing the zen to our codebase was important. It made them ours, not mine. It made them malleable, not forever. It made them the responsibility of the whole product development group, not just people who labeled themselves designers.
@@ -130,8 +130,8 @@ It's often hard to know how much your words are hitting home as a leader. People
 Which is why it made me so happy to see the zen spread. At first, in small design discussions. Then in our [api](https://api.github.com/zen). And in `Hubot zen me`. And then in wallpapers for our desktops.
 
 <div class="figure">
-<img src="http://assets.warpspire.com/images/zen/wallpapers.jpg" />
-<small>Wallpapers by <a href="http://cobyism.com">Coby Chapple</a> (<a href="http://assets.warpspire.com/images/zen/GitHub%20Zen%20Wallpapers.zip">Wallpapers.zip</a>)</small>
+<img src="https://assets.warpspire.com/images/zen/wallpapers.jpg" />
+<small>Wallpapers by <a href="http://cobyism.com">Coby Chapple</a> (<a href="https://assets.warpspire.com/images/zen/GitHub%20Zen%20Wallpapers.zip">Wallpapers.zip</a>)</small>
 </div>
 
 Pretty soon it wasn't just a presentation I gave or a file I committed. It was The Zen of GitHub. A thing by itself, free to be [made fun of and celebrated](https://api.github.com/octocat) all at once. And that's pretty cool.
