--- a/_posts/2017-03-24-next.md
+++ b/_posts/2017-03-24-next.md
@@ -14,7 +14,7 @@ Ever since then, I've struggled to describe how it is I spend my time to my peer
 So when people ask what it is I'm doing, I've mostly kept it light. I tell people I'm semi-retired. It's not entirely untruthful — I've spent a _lot_ more time outside and doing fun things — but it's a lot less than the whole.
 
 <div class="figure">
-<img src="http://assets.warpspire.com/images/next/powsurfing.jpg" />
+<img src="https://assets.warpspire.com/images/next/powsurfing.jpg" />
 </div>
 
 That being said, I've been working hard for the past few months to find more space for me again. Which also means I've been thinking more about what's next.
@@ -54,7 +54,7 @@ I believe we can live in comfort and abundance while also living in greater harm
 This is a big part of what's next for me. Last year, I became part-owner in an old high-country cattle camp / working forest near Tahoe. This is where I want to explore more of these ideas and share them with others. We're building a place to get away from the craziness of the modern world and explore examples of living in comfort & abundance in harmony with nature. Call it part working forest (growing trees for profit), part getaway, and part laboratory.
 
 <div class="figure">
-<img src="http://assets.warpspire.com/images/next/daisy-field.jpg" />
+<img src="https://assets.warpspire.com/images/next/daisy-field.jpg" />
 <small>David and Alia enjoying springtime in Leaping Daisy's meadow.</small>
 </div>
 
