--- a/_posts/2010-03-29-focus.md
+++ b/_posts/2010-03-29-focus.md
@@ -15,25 +15,25 @@ If your site&rsquo;s focus is sharing code, the design should focus on sharing c
 
 ### [GitHub](http://github.com/facebook/three20)
 
-<div class="figure"><img src="http://assets.warpspire.com/images/focus/github.gif" alt="GitHub" /></div>
+<div class="figure"><img src="https://assets.warpspire.com/images/focus/github.gif" alt="GitHub" /></div>
 
 When you visit a GitHub project page, the first thing you see is the source code. Right below is the README pulled straight from the code.
 
 ### [BitBucket](http://bitbucket.org/jespern/django-piston/overview/)
 
-<div class="figure"><img src="http://assets.warpspire.com/images/focus/bitbucket.gif" alt="BitBucket" /></div>
+<div class="figure"><img src="https://assets.warpspire.com/images/focus/bitbucket.gif" alt="BitBucket" /></div>
 
 BitBucket chose to highlight the shortlog (recent commits) on the project page.  If you want to see the code, you need to go to the 3rd tab.
 
 ### [SourceForge](http://sourceforge.net/projects/junit/)
 
-<div class="figure"><img src="http://assets.warpspire.com/images/focus/sourceforge.gif" alt="SourceForge" /></div>
+<div class="figure"><img src="https://assets.warpspire.com/images/focus/sourceforge.gif" alt="SourceForge" /></div>
 
 Sourceforge chose to highlight downloads (in this case, a compiled jar file &mdash; not the code) on the project page.  If you want to see the code, you need to click Develop, and then fish around in the sidebar for the correct VCS and click browse.
 
 ### [Google Code](http://code.google.com/p/flot/)
 
-<div class="figure"><img src="http://assets.warpspire.com/images/focus/googlecode.gif" alt="Google Code" /></div>
+<div class="figure"><img src="https://assets.warpspire.com/images/focus/googlecode.gif" alt="Google Code" /></div>
 
 Google Code chose to highlight the wiki on the project page.  Getting to the code in Google Code is probably the most interesting of the bunch because many projects don&rsquo;t even host their code there (example: [redis](http://code.google.com/p/redis/wiki/UnstableSource?tm=4)).
 
@@ -41,7 +41,7 @@ When you click the Source tab you actually get a wiki page which many projects u
 
 ### [Launchpad](https://launchpad.net/drizzle)
 
-<div class="figure"><img src="http://assets.warpspire.com/images/focus/launchpad.gif" alt="Launchpad" /></div>
+<div class="figure"><img src="https://assets.warpspire.com/images/focus/launchpad.gif" alt="Launchpad" /></div>
 
 Launchpad decided to highlight everything but the source code on the project page.  If you want to see the code, there is a tiny link in the middle of the page that says &rsquo;View the branch content.&rsquo;
 
@@ -51,19 +51,19 @@ Source code hosting is just something that I&rsquo;m extremely involved with. Th
 
 ### [Flickr](http://www.flickr.com/photos/wcouch/4338090218/)
 
-<div class="figure"><img src="http://assets.warpspire.com/images/focus/flickr.gif" alt="Flickr" /></div>
+<div class="figure"><img src="https://assets.warpspire.com/images/focus/flickr.gif" alt="Flickr" /></div>
 
 Flickr is all about sharing photos.
 
 ### [Facebook](http://facebook.com)
 
-<div class="figure"><img src="http://assets.warpspire.com/images/focus/facebook.gif" alt="Facebook" /></div>
+<div class="figure"><img src="https://assets.warpspire.com/images/focus/facebook.gif" alt="Facebook" /></div>
 
 Facebook is all about connecting with your friends.
 
 ### [Daring Fireball](http://daringfireball.net)
 
-<div class="figure"><img src="http://assets.warpspire.com/images/focus/fireball.gif" alt="Daring Fireball" /></div>
+<div class="figure"><img src="https://assets.warpspire.com/images/focus/fireball.gif" alt="Daring Fireball" /></div>
 
 Daring Fireball is all about John Gruber&rsquo;s writing.
 
@@ -73,15 +73,15 @@ There is a huge genre of sites that seem to have completely forgotten their focu
 
 ### [MSNBC](http://msnbc.com)
 
-<div class="figure"><img src="http://assets.warpspire.com/images/focus/msnbc.gif" alt="MSNBC" /></div>
+<div class="figure"><img src="https://assets.warpspire.com/images/focus/msnbc.gif" alt="MSNBC" /></div>
 
 ### [NYTimes](http://nytimes.com)
 
-<div class="figure"><img src="http://assets.warpspire.com/images/focus/nytimes.gif" alt="NYTimes" /></div>
+<div class="figure"><img src="https://assets.warpspire.com/images/focus/nytimes.gif" alt="NYTimes" /></div>
 
 ### [Rolling Stone](http://www.rollingstone.com/politics/story/32255149/wall_streets_bailout_hustle/p)
 
-<div class="figure"><img src="http://assets.warpspire.com/images/focus/rollingstone.gif" alt="Rolling Stone" /></div>
+<div class="figure"><img src="https://assets.warpspire.com/images/focus/rollingstone.gif" alt="Rolling Stone" /></div>
 
 It&rsquo;s no wonder news sites can&rsquo;t get people to pay for their content. You need to focus on your content to get people to pay for it.
 
@@ -89,7 +89,7 @@ It&rsquo;s no wonder news sites can&rsquo;t get people to pay for their content.
 
 Many sites don&rsquo;t want to give away their focus for free. That&rsquo;s perfectly fine. But it doesn&rsquo;t change a thing. Replace what people are going to pay for with an opportunity to pay you.
 
-<div class="figure"><img src="http://assets.warpspire.com/images/focus/peepcode.gif" alt="PeepCode" /></div>
+<div class="figure"><img src="https://assets.warpspire.com/images/focus/peepcode.gif" alt="PeepCode" /></div>
 
 PeepCode&rsquo;s focus is great tutorials. But the tutorial is not the focus of the product page &mdash; instead a teaser and a purchase button are.
 
