All the old goes into proxima quarantine

--- a/_posts/2011-08-02-ops-art.md
+++ b/_posts/2011-08-02-ops-art.md
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: proxima/post
 title: "Deploying: Then & Now"
 category: opinion
 summary: Of deploying a major feature on a stage and my love for Hubot.
