--- a/_posts/2011-12-05-kss.md
+++ b/_posts/2011-12-05-kss.md
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: proxima/post
 title: "Knyle Style Sheets"
 category: opinion
 summary: Documentation for any flavor of CSS that you’ll love to write.
