--- a/_posts/2012-08-02-pace.md
+++ b/_posts/2012-08-02-pace.md
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: proxima/post
 title: "Pace"
 summary: I want to spend more time conscious of the pace of my life.
 excerpt:
