--- a/_posts/2014-01-03-product.md
+++ b/_posts/2014-01-03-product.md
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: proxima/post
 title: "Product"
 category: opinion
 summary: Product is the reason that I build software. I want to create things that bring people joy. I want to build things I can be proud of. Things that makes the world a better place.
