--- a/_posts/2014-08-06-secret.md
+++ b/_posts/2014-08-06-secret.md
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: proxima/post
 title: "Investors of Secret: I have a favor to ask"
 category: opinion
 summary: Secret's champions claim the service will overcome the darker side of human behavior and won't become a tool for bullying and defamation. I'm not so sure, so I have a favor to ask.
