--- a/_posts/2014-09-04-ego.md
+++ b/_posts/2014-09-04-ego.md
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: proxima/post
 title: Ego
 category: opinion
 summary: I remember the first time Bitbucket straight up stole one of my designs. The layout. The borders. The shadows. The exact information on the page!<br /><br />I was angry.
