--- a/_posts/2014-10-02-taste.md
+++ b/_posts/2014-10-02-taste.md
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: proxima/post
 title: Taste and The Zen of GitHub
 category: opinion
 summary: About two years ago, GitHub's product development team was growing fast and I found myself thinking about taste a lot. We were getting an influx of new points of view, new opinions, new frames of reference for <em>good taste</em>. But how do you ensure your organization has good taste?
